--- a/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
+++ b/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
@@ -8,17 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>AppAcademia</title>
+    <title>Hello, world!</title>
   </head>
   <body>
-    <h1 style="text-align: center;">Bem Vindo!</h1>
-    <div style="text-align: center;" class="container">
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaAluno/" role="button">Aluno</a>
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaProf/" role="button">Professor</a>
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaGerente/" role="button">Gerente</a>
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaRecepcionista/" role="button">Recepcionista</a>
-    </div>
-    
+    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
