edição da telaRecepcionista e telaAluno

--- a/projeto_academia/app_academia/templates/telaAluno/loginAluno.html
+++ b/projeto_academia/app_academia/templates/telaAluno/loginAluno.html
@@ -12,17 +12,21 @@
             flex-direction: column;
             justify-content: center;
             gap: 10px;
+            align-items: center;
 
         }
 
         h1 {
             text-align: center;
 
-
         }
 
-        .envio {
+        .controleAluno {
+            width: 300px;
+        }
 
+        .option {
+            width: 70px;
             border-radius: 10px;
         }
     </style>
@@ -40,11 +44,11 @@
         </div>
     </nav>
 
-    
+
     <div class="container">
-    <h1 style="font-size: 30px">Insira sua matrícula</h1>
+        <h1 style="font-size: 30px">Insira seu CPF</h1>
         <input type="text" name="matricula" class="controleAluno">
-        <button name="button" class="envio">Enviar</button>
+        <button name="button" class="option">Login</button>
 
 
     </div>
