--- a/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
+++ b/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
@@ -38,6 +38,7 @@
 
     <button name="button" class="a option">Lista alunos</button>
     <button name="button" class="b option">Pacotes disponíveis</button>
+    <button name="button" class="c option">Cadastrar aluno</button>
 
 
   </div>
