--- a/projeto_academia/app_academia/templates/usuarios/home.html
+++ b/projeto_academia/app_academia/templates/usuarios/home.html
@@ -13,10 +13,10 @@
   <body>
     <h1 style="text-align: center;">Bem Vindo!</h1>
     <div style="text-align: center;" class="container">
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaAluno/" role="button">Aluno</a>
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaProf/" role="button">Professor</a>
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaGerente/" role="button">Gerente</a>
-        <a class="btn btn-primary" href="http://127.0.0.1:8000/telaRecepcionista/" role="button">Recepcionista</a>
+        <a class="btn btn-primary" href="telaAluno/" role="button">Aluno</a>
+        <a class="btn btn-primary" href="telaProf/" role="button">Professor</a>
+        <a class="btn btn-primary" href="telaGerente/" role="button">Gerente</a>
+        <a class="btn btn-primary" href="telaRecepcionista/" role="button">Recepcionista</a>
     </div>
     
 
