--- a/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
+++ b/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
@@ -36,9 +36,9 @@
 
   <div class="container">
 
-    <button name="button" class="a option">Lista alunos</button>
-    <button name="button" class="b option">Pacotes disponíveis</button>
-    <button name="button" class="c option">Cadastrar aluno</button>
+    <a href="http://127.0.0.1:8000/listaAluno/"><button name="button" class="a option">Lista alunos</button></a>
+    <a><button name="button" class="b option">Pacotes disponíveis</button></a>
+    <a href="http://127.0.0.1:8000/cadAluno/"><button name="button" class="c option">Cadastrar aluno</button></a>
 
 
   </div>
