--- a/projeto_academia/app_academia/templates/telaGerente/telaGerente.html
+++ b/projeto_academia/app_academia/templates/telaGerente/telaGerente.html
@@ -8,10 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Gerente</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div style="text-align: center;" class="container">
+      <a class="btn btn-primary" href="http://127.0.0.1:8000/cadMaquinario/" role="button">Cadastrar Maquinário</a>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
