--- a/projeto_academia/app_academia/templates/telaGerente/telaGerente.html
+++ b/projeto_academia/app_academia/templates/telaGerente/telaGerente.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div style="text-align: center;" class="container">
-      <a class="btn btn-primary" href="http://127.0.0.1:8000/cadMaquinario/" role="button">Cadastrar Maquinário</a>
+      <a class="btn btn-primary" href="/cadMaquinario/" role="button">Cadastrar Maquinário</a>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
