--- a/projeto_academia/app_academia/templates/telaGerente/cadMaquinario.html
+++ b/projeto_academia/app_academia/templates/telaGerente/cadMaquinario.html
@@ -26,7 +26,7 @@
                 Responsável <input name="responsavel" class="form-control-sm" type="text">
                 Garantia <input name="garantia" class="form-control-sm" type="date">
                 <!-- Unidade <input name="unidade" class="form-control-sm" type="text"> -->
-                <button class="form-control-sm">Enviar</button>
+                <button class="form-control-sm">Enviara</button>
             </div>
         </form>
         
