--- a/projeto_academia/app_academia/templates/telaGerente/cadMaquinario.html
+++ b/projeto_academia/app_academia/templates/telaGerente/cadMaquinario.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,39 +9,57 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Cadastrar Maquinário</title>
-  </head>
-  <body>
-        <form action="{% url 'listagem_maquinas' %}" method="post">
-          {% csrf_token %}
-            <div style="text-align: center;" class="container">
-                <h1>Insira os dados da máquina</h1>
-                Nome <input name="nome" class="form-control-sm" type="text">
-                Grupo Muscular <input name="grupo_muscular" class="form-control-sm" type="text">
-                Marca <input name="marca" class="form-control-sm" type="text">
-                Data de Compra <input name="data_compra" class="form-control-sm" type="date">
-                Última Manutenção <input name="ult_manutencao" class="form-control-sm" type="date">
-                Fornecedor <input name="fornecedor" class="form-control-sm" type="text">
-                Prazo de Manutenção <input name="prazo_manutencao" class="form-control-sm" type="text">
-                Próxima Manutenção <input name="prox_manutencao" class="form-control-sm" type="date">
-                Responsável <input name="responsavel" class="form-control-sm" type="text">
-                Garantia <input name="garantia" class="form-control-sm" type="date">
-                <!-- Unidade <input name="unidade" class="form-control-sm" type="text"> -->
-                <button class="form-control-sm">Enviara</button>
+</head>
+<body style="background-color: #f0f8ff;">
+
+<form action="{% url 'listagem_maquinas' %}" method="post">
+    {% csrf_token %}
+    <div class="container">
+        <nav style="background-color: lightsteelblue !important;" class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <span class="navbar-brand mb-0 h1">Cadastrar Maquinário</span>
             </div>
-        </form>
-        
- 
-    
+        </nav>
+        <div style="text-align: center;" class="container mt-5">
+            <h1>Insira os dados da máquina</h1>
+            <div class="mb-3">
+                <input name="nome" class="form-control" type="text" placeholder="Nome">
+            </div>
+            <div class="mb-3">
+                <input name="grupo_muscular" class="form-control" type="text" placeholder="Grupo Muscular">
+            </div>
+            <div class="mb-3">
+                <input name="marca" class="form-control" type="text" placeholder="Marca">
+            </div>
+            <div class="mb-3">
+                <input name="data_compra" class="form-control" type="date" placeholder="Data de Compra">
+            </div>
+            <div class="mb-3">
+                <input name="ult_manutencao" class="form-control" type="date" placeholder="Última Manutenção">
+            </div>
+            <div class="mb-3">
+                <input name="fornecedor" class="form-control" type="text" placeholder="Fornecedor">
+            </div>
+            <div class="mb-3">
+                <input name="prazo_manutencao" class="form-control" type="date" placeholder="Prazo de Manutenção">
+            </div>
+            <div class="mb-3">
+                <input name="prox_manutencao" class="form-control" type="date" placeholder="Próxima Manutenção">
+            </div>
+            <div class="mb-3">
+                <input name="responsavel" class="form-control" type="text" placeholder="Responsável">
+            </div>
+            <div class="mb-3">
+                <input name="garantia" class="form-control" type="date" placeholder="Garantia">
+            </div>
+            <!-- Unidade <input name="unidade" class="form-control" type="text"> -->
+            <button class="btn btn-primary">Enviar</button>
+        </div>
+    </div>
+</form>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+<!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
+</body>
 </html>
