--- a/projeto_academia/app_academia/templates/telaProf/telaProf.html
+++ b/projeto_academia/app_academia/templates/telaProf/telaProf.html
@@ -2,88 +2,77 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <title>Tela professor</title>
+    <title>Tela professor</title>
 </head>
 
-<body>
-  <nav style="background-color: lightsteelblue !important;" class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-      <span class="navbar-brand mb-0 h1">Gerenciar treinos</span>
-    </div>
-  </nav>
-  <form action="{% url 'listagem_treinos' %}" method="post">
-    {% csrf_token %}
-    <div class="container">
-      <h1 style="text-align: center;">Cadastrar treinos</h1>
-      <div class="mb-3">
-        <label for="aluno" class="form-label">Aluno</label>
-        <input id="aluno" name="aluno" class="form-control" type="text">
-      </div>
-      <div class="mb-3">
-        <label for="treino" class="form-label">Treino</label>
-        <input id="treino" name="treino" class="form-control" type="text">
-      </div>
-      <div class="exercicios mb-3">
-        <h2>Exercícios</h2>
-        <div class="exercicio mb-3">
-          <div class="row">
-            <div class="col">
-              <label for="nome_exercicio" class="form-label">Nome do Exercício</label>
-              <input name="nome_exercicio[]" class="form-control" type="text">
-            </div>
-            <div class="col">
-              <label for="series" class="form-label">Séries</label>
-              <input name="series[]" class="form-control" type="number">
-            </div>
-            <div class="col">
-              <label for="repeticoes" class="form-label">Repetições</label>
-              <input name="repeticoes[]" class="form-control" type="number">
-            </div>
-          </div>
+<body style="background-color: #f0f8ff;">
+    <nav style="background-color: lightsteelblue !important;" class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Gerenciar treinos</span>
         </div>
-      </div>
-      <button class="btn btn-success">Adicionar Treino</button>
+    </nav>
+    <form action="{% url 'listagem_treinos' %}" method="post">
+        {% csrf_token %}
+        <div class="container mt-5">
+            <h1 class="text-center" style="color: #007bff;">Cadastrar Treinos</h1>
+            <div class="mb-3">
+                <label for="aluno" class="form-label" style="color: #007bff;">CPF do Aluno</label>
+                <input id="aluno" name="aluno" class="form-control" type="text">
+            </div>
+            <div class="mb-3">
+                <label for="treino" class="form-label" style="color: #007bff;">Nome do Treino</label>
+                <input id="treino" name="treino" class="form-control" type="text">
+            </div>
+            <div class="exercicios mb-3">
+                <h2 style="color: #007bff;">Exercícios</h2>
+                <div class="exercicio mb-3">
+                    <div class="row">
+                        <div class="col">
+                            <label for="nome_exercicio" class="form-label" style="color: #007bff;">Nome do
+                                Exercício</label>
+                            <input name="nome_exercicio[]" class="form-control" type="text">
+                        </div>
+                        <div class="col">
+                            <label for="series" class="form-label" style="color: #007bff;">Séries</label>
+                            <input name="series[]" class="form-control" type="number">
+                        </div>
+                        <div class="col">
+                            <label for="repeticoes" class="form-label" style="color: #007bff;">Repetições</label>
+                            <input name="repeticoes[]" class="form-control" type="number">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-success" style="background-color: #007bff; border-color: #007bff;">Adicionar
+                Treino</button>
+        </div>
+    </form>
+    <div class="container mt-4">
+        <button id="add-exercicio" class="btn btn-primary"
+            style="background-color: #007bff; border-color: #007bff;">Adicionar Exercício</button>
     </div>
-  </form>
-  <br>
-  <div>
-    <button id="add-exercicio" class="btn btn-primary mb-3" style="margin-left: 110px;">Adicionar Exercício</button>
 
-  </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#add-exercicio").click(function () {
+                $(".exercicios").append('<div class="exercicio mb-3"><div class="row"><div class="col"><label for="nome_exercicio" class="form-label" style="color: #007bff;">Nome do Exercício</label><input name="nome_exercicio[]" class="form-control" type="text"></div><div class="col"><label for="series" class="form-label" style="color: #007bff;">Séries</label><input name="series[]" class="form-control" type="number"></div><div class="col"><label for="repeticoes" class="form-label" style="color: #007bff;">Repetições</label><input name="repeticoes[]" class="form-control" type="number"></div></div></div>');
+            });
+        });
+    </script>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      $("#add-exercicio").click(function() {
-        $(".exercicios").append('<div class="exercicio mb-3"><div class="row"><div class="col"><label for="nome_exercicio" class="form-label">Nome do Exercício</label><input name="nome_exercicio[]" class="form-control" type="text"></div><div class="col"><label for="series" class="form-label">Séries</label><input name="series[]" class="form-control" type="number"></div><div class="col"><label for="repeticoes" class="form-label">Repetições</label><input name="repeticoes[]" class="form-control" type="number"></div></div></div>');
-      });
-    });
-  </script>
-
-  
-  
-  
-
-  <!-- Optional JavaScript; choose one of the two! -->
-
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
