--- a/projeto_academia/app_academia/templates/telaRecepcionista/listaAluno.html
+++ b/projeto_academia/app_academia/templates/telaRecepcionista/listaAluno.html
@@ -1,50 +1,107 @@
 <!DOCTYPE html>
-<html lang="en" dir="lth">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="utf-8">
     <title>Lista de Alunos</title>
 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.datatables.net/2.0.1/css/dataTables.dataTables.min.css">
+    
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
 
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .navbar {
+            background-color: lightsteelblue !important;
+        }
+
+        .container {
+            margin-top: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #007bff;
+        }
+
+        #alunoTable th,
+        #alunoTable td {
+            vertical-align: middle;
+        }
+
+        .btn-danger {
+            background-color: #dc3545;
+            border-color: #dc3545;
+        }
+
+        .btn-danger:hover {
+            background-color: #c82333;
+            border-color: #bd2130;
+        }
+    </style>
 </head>
 
 <body>
-    <nav style="background-color: lightsteelblue !important;" class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">Alunos Matriculados</span>
         </div>
     </nav>
 
     <div class="container">
+        <h1>Lista de Alunos</h1>
         <table id="alunoTable" class="table table-striped">
-            <tr>
-                <th>CPF</th>
-                <th>nome</th>
-                <th>data</th>
-                <th>telefone</th>
-                <th>pacote</th>
-                <th>Operations</th>
-            </tr>
-            {% for aluno in alunos%}
-            <tr>
-                <td>{{aluno.cpf}}</td>
-                <td>{{aluno.nome}}</td>
-                <td>{{aluno.data_nasc}}</td>
-                <td>{{aluno.telefone}}</td>
-                <td>{{aluno.pacote}}</td>
-                <td>
-                    <a class="btn btn-danger" href="/delete/{{aluno.cpf}}">Deletar</a>
-                </td>
-            </tr>
-            {% endfor %}
+            <thead>
+                <tr>
+                    <th>CPF</th>
+                    <th>Nome</th>
+                    <th>Data de Nascimento</th>
+                    <th>Telefone</th>
+                    <th>Pacote</th>
+                    <th>Operações</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for aluno in alunos %}
+                <tr>
+                    <td>{{ aluno.cpf }}</td>
+                    <td>{{ aluno.nome }}</td>
+                    <td>{{ aluno.data_nasc }}</td>
+                    <td>{{ aluno.telefone }}</td>
+                    <td>{{ aluno.pacote }}</td>
+                    <td>
+                        <form method="post" action="{% url 'delete' aluno.cpf %}">
+                            {% csrf_token %}
+                            <button class="btn btn-danger" type="submit">Deletar</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
-
     </div>
 
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
+    <script>
+        $(document).ready(function () {
+            $('#alunoTable').DataTable();
+        });
+    </script>
 </body>
 
 </html>
