--- a/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
+++ b/projeto_academia/app_academia/templates/telaRecepcionista/telaRecepcionista.html
@@ -5,47 +5,72 @@
   <meta charset="utf-8">
   <title>Menu Recepção</title>
 
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <style>
+    body {
+      background-color: #f8f9fa;
+    }
+
     .container {
       display: flex;
+      flex-direction: column;
+      align-items: center;
       margin-top: 50px;
-      flex-direction: row;
-      justify-content: center;
-      gap: 20px;
+    }
 
+    h1 {
+      display: none;
+    }
+
+    .menu-buttons {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      justify-content: center;
     }
 
     .option {
-      background-color: rgb(168, 203, 242);
+      background-color: #007bff;
+      color: #ffffff;
+      border: none;
       border-radius: 10px;
+      padding: 15px;
+      font-size: 18px;
+      text-align: center;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      text-decoration: none; /* Remove o sublinhado */
+    }
+
+    .option:hover {
+      background-color: #0056b3;
+    }
+
+    .navbar {
+      background-color: lightsteelblue !important;
     }
   </style>
-
-
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-  <nav style="background-color: lightsteelblue !important;" class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">Menu Recepção</span>
     </div>
   </nav>
 
   <div class="container">
-
-    <a href="http://127.0.0.1:8000/listaAluno/"><button name="button" class="a option">Lista alunos</button></a>
-    <a><button name="button" class="b option">Pacotes disponíveis</button></a>
-    <a href="http://127.0.0.1:8000/cadAluno/"><button name="button" class="c option">Cadastrar aluno</button></a>
-
-
+    <div class="menu-buttons">
+      <a class="option" href="http://127.0.0.1:8000/listaAluno/">Lista alunos</a>
+      <a class="option" href="#">Pacotes disponíveis</a>
+      <a class="option" href="http://127.0.0.1:8000/cadAluno/">Cadastrar aluno</a>
+    </div>
   </div>
 
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="game.js" charset="utf-8"></script>
+  <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
